--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-layout {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: center;
+  max-width: 500px;
+  margin: auto;
+}
+
+.title {
+  font-size: 1.5em;
+}
+
+.letter-grid {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+.letter-grid-row {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+  align-items: center;
+}
+
+.letter-grid-item {
+  display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  vertical-align: center;
+  text-align: center;
+  display: flex;
+  height: 60px;
+  width: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+.keyboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.keyboard-row {
+  display: flex;
+  flex-direction: row;
+}
+.keyboard-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 30px;
 }
