Make text not selectable

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 body {
   /* background-color: var(--salmon); */
   background-color: var(--french-raspberry);
+  user-select: none;
 }
 hr {
   width: 100%;
