--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 
 :root {
@@ -11,7 +10,7 @@
 }
 body {
   /* background-color: var(--salmon); */
-  background-color: var(--french-raspberry);
+  /* background-color: var(--french-raspberry); */
   user-select: none;
 }
 hr {
@@ -21,12 +20,12 @@ hr {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
   max-width: 500px;
   margin: auto;
   /* font-family: 'Merriweather', serif; */
   font-family: 'Libre Baskerville', serif;
-  height: 95vh;
+  /* height: 95vh; */
 }
 
 .title {
@@ -97,6 +96,12 @@ hr {
   font-size: 1.4em;
 }
 
+.game-over {
+  font-size: 1.6em;
+}
+
 .game-over-restart {
   text-decoration: underline;
+  color: blue;
+  font-size: 0.8em;
 }
