--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   --french-raspberry: #c33149ff;
 }
 body {
-  /* background-color: var(--salmon); */
+  background-color: var(--salmon);
   /* background-color: var(--french-raspberry); */
   user-select: none;
 }
@@ -91,7 +91,6 @@ hr {
   height: 30px;
   width: 30px;
   border: 2px solid black;
-  border-radius: 16px;
   margin: 3px;
   font-size: 1.4em;
 }
@@ -103,5 +102,5 @@ hr {
 .game-over-restart {
   text-decoration: underline;
   color: blue;
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
