--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,7 @@ hr {
 }
 
 .keyboard {
+  height: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -110,6 +111,7 @@ hr {
 }
 
 .game-over {
+  height: 30%;
   font-size: 1.8em;
   text-align: center;
 }
